# monero_contract_system

./: Cargo.toml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  contract.html  contracts.db  index.html
src/: index.html  main.rs
static/: style.css
templates/: contract.html  contracts.db  index.html
