[package]
name = "rust-web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v4"] }
bip39 = "2.1"
rand = "0.8"
mime = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
